# epub2audio

./: .dockerignore  .gitignore  Dockerfile  README.md  amdgpu-install_6.3.60302-1_all.deb  mise.toml  pyproject.toml  test.py
.github/workflows/: pypi.yaml
audiobooks/: Sample_Book.flac
books/: The_Ethical_Slut_Third_Edition-Janet_W._Hardy.epub
epub2audio/: _version.py
src/: __init__.py  audio_converter.py  audio_handler.py  cli.py  config.py  epub2audio.py  epub_processor.py  helpers.py  voices.py
tests/: conftest.py  test_audio_converter.py  test_audio_handler.py  test_cli.py  test_epub_processor.py  test_helpers.py
tests/data/: sample-single-page.epub  sample.epub
